API v2, adding Users model & JWT
