# app/controllers/products_controller.rb
@@ -7,8 +7,8 @@ require_relative './base_controller'
 class ProductsController < BaseController
   # GET /products
   #
-  def index(tokens)
-    return unauthorized unless authorized?(tokens)
+  def index
+    return unauthorized unless authorized?
 
     products = Product.all
     @res.headers['Content-Type'] = 'application/json'
@@ -17,8 +17,8 @@ class ProductsController < BaseController
 
   # GET /products/:id
   #
-  def show(tokens, id: nil)
-    return unauthorized unless authorized?(tokens)
+  def show(id: nil)
+    return unauthorized unless authorized?
 
     product = Product.find(id)
     @res.headers['Content-Type'] = 'application/json'
@@ -31,26 +31,10 @@ class ProductsController < BaseController
     end
   end
 
-  # GET /products/last
-  #
-  def last(tokens)
-    return unauthorized unless authorized?(tokens)
-
-    product = Product.last_record
-    @res.headers['Content-Type'] = 'application/json'
-    if product
-      @res.write JSON.generate(product.to_h)
-    else
-      @res.status = 404
-      @res.headers['Content-Type'] = 'application/json'
-      @res.write JSON.generate({ error: 'No hay productos' })
-    end
-  end
-
   # POST /products
   #
-  def create(tokens)
-    return unauthorized unless authorized?(tokens)
+  def create
+    return unauthorized unless authorized?
 
     @req.body.rewind
     payload = JSON.parse(@req.body.read)
@@ -63,11 +47,11 @@ class ProductsController < BaseController
     id = Product.next_available_id
     Thread.new do
       sleep 5
-      product = Product.new(id: id, name: payload['name'])
+      product = Product.new(id: id, name: payload['name'], user_id: current_user_id)
       product.save
     end
     @res.status = 201
     @res.headers['Content-Type'] = 'application/json'
-    @res.write JSON.generate({ message: 'Producto creado asincronamente, para obtener el producto use el endpoint GET /products/last' })
+    @res.write JSON.generate({ message: "Producto creado asincronamente, para visualizar el producto use el endpoint GET /products/#{id}" })
   end
 end
